Fix whitespace issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -178,3 +178,17 @@ border-bottom:1px solid #A3A3A3;
   font-family: 'section_titles_din';
   margin-bottom: 10px;
 }
+
+/*.row {
+  margin-right: 0px;
+  margin-left: 0px;
+}*/
+
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
